--- a/AndroidSample_Retrofit_RESTAPI/app/src/main/res/layout/activity_albums.xml
+++ b/AndroidSample_Retrofit_RESTAPI/app/src/main/res/layout/activity_albums.xml
@@ -1,18 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_albums"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="16dp"
-    android:paddingLeft="64dp"
-    android:paddingRight="64dp"
-    android:paddingTop="16dp"
-    tools:context="com.codingblocks.restapiretrofitjson.AlbumsActivity">
-
+    tools:context="com.codingblocks.restapiretrofitjson.activities.AlbumsActivity">
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
         android:id="@+id/rv_Albums" />
+
 </RelativeLayout>
