--- a/app/src/main/res/layout/list_item_album.xml
+++ b/app/src/main/res/layout/list_item_album.xml
@@ -10,8 +10,8 @@
 
         />
     <TextView
-        android:layout_width="297dp"
-        android:layout_height="30dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/tvAlbumTitle"
         />
 
