--- a/app/src/main/res/layout/list_item_todo.xml
+++ b/app/src/main/res/layout/list_item_todo.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="wrap_content">
-
+  <CheckBox
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="10dp"
+      android:checked="false"
+      android:id="@+id/checkbox"/>
     <TextView
         android:text="Sample Todo Text"
         android:id="@+id/tvTodoTitle"
+        android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
